[tool.poetry]
name = "bioseqdb"
version = "0.1.0"
description = ""
authors = ["Piotr Styczyński <piotr@styczynski.in>"]

[tool.poetry.dependencies]
python = "^3.8"
yasha = "^5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
